src/objects/Campaign_Milestone_Timestamp_Map__mdt.object
<CustomObject>
    <description>Mapping of campaign project milestone with the corresponding timestmap field</description>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <description>Name of milestone as defined in the campaign project campaign milestone field</description>
        <inlineHelpText>Name of milestone as defined in the campaign project campaign milestone field</inlineHelpText>
        <label>Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_Field__c</fullName>
        <description>Milestone Status Field Name</description>
        <inlineHelpText>Milestone Status Field</inlineHelpText>
        <label>Milestone Status Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Timestamp_Field__c</fullName>
        <description>the API name of the timestamp milestone field in campaign project</description>
        <inlineHelpText>the API name of the timestamp milestone field in campaign project</inlineHelpText>
        <label>Milestone Timestamp Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Campaign Milestone Timestamp Map</label>
    <pluralLabel>Campaign Milestone Timestamp Map</pluralLabel>
</CustomObject>